--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
-language: ruby
-rvm:
- - 2.2
- - jruby
+language: objective-c
+os:
+  - osx
+before_install:
+  - brew update
+  - brew install python
+  - brew install ansible
+  - ansible-playbook -vv playbook.yml -i hosts
+# script:
+#   - make test
 notifications:
     slack: shimi-rsslack:bUoxLktUdcotH8rYgMyCcTJR
