--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: objective-c
 os:
   - osx
 before_install:
+  - sw_vers
   - brew update
-  - brew install python
   - brew install ansible
   - ansible-playbook -vv playbook.yml -i hosts
 # script:
