--- a/playbook.yml
+++ b/playbook.yml
@@ -6,5 +6,12 @@
 
 - hosts: localhost
   user: root
+  vars:
+    apache_listen_port_ssl: 443
+    apache_create_vhosts: true
+    apache_vhosts_filename: "vhosts.conf"
+    apache_vhosts:
+      - servername: "example.com"
+        documentroot: "/var/www/vhosts/example_com"
   roles:
     - { role: geerlingguy.apache }
